syntax = "proto2";
option go_package = "../pb";

import "error.proto";

message LoginReq {
  required string Name = 1;
  required string PassWord = 2;
}

message LoginAck {
  required  int32	    PlayerId = 1;
  required  ErrorType Error = 2;
}

message RegisterReq {
  required string Name = 1;
  required string PassWord = 2;
}

message RegisterAck {
  required ErrorType Error  = 1;
}